@@ -1,5 +1,7 @@
-Zmiany w QMPlay2 build 15.05.29:
+Zmiany w QMPlay2 build 15.05.30:
+	- poprawa drag and drop na playliście,
 	- poprawa operacji na katalogach,
+	- poprawa drobnych błędów,
 
 Zmiany w QMPlay2 build 15.05.10:
 	- poprawa wyszukiwania w YouTube,
